<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.predator.movietype.ComedyActivity">

    <TextView
        android:id="@+id/up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/up"
        android:textSize="25sp"
        android:layout_marginTop="25dp"
        android:layout_marginStart="30dp"/>
    <TextView
        android:id="@+id/toy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toy_story"
        android:textSize="25sp"
        android:layout_below="@+id/up"
        android:layout_marginStart="30dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spy"
        android:textSize="25sp"
        android:layout_below="@+id/toy"
        android:layout_marginStart="30dp"/>
</RelativeLayout>
