<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.predator.movietype.SciActivity">

    <TextView
        android:id="@+id/mib"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/men_in_black"
        android:textSize="25sp"
        android:layout_marginTop="25dp"
        android:layout_marginStart="30dp"/>
    <TextView
        android:id="@+id/st"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/star_trek"
        android:textSize="25sp"
        android:layout_below="@+id/mib"
        android:layout_marginStart="30dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/interstellar"
        android:textSize="25sp"
        android:layout_below="@+id/st"
        android:layout_marginStart="30dp"/>
</RelativeLayout>
