<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.predator.movietype.ThrillerActivity">

    <TextView
        android:id="@+id/inception"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inception"
        android:textSize="25sp"
        android:layout_marginTop="25dp"
        android:layout_marginStart="30dp" />
    <TextView
        android:id="@+id/taken"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/taken"
        android:textSize="25sp"
        android:layout_below="@+id/inception"
        android:layout_marginStart="30dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jason_bourne"
        android:textSize="25sp"
        android:layout_below="@+id/taken"
        android:layout_marginStart="30dp"/>
</RelativeLayout>
